# flet_custom_drag_target

./: README.md  mkdocs.yml  pyproject.toml
docs/: CustomDragTarget.md  index.md
examples/custom_drag_target_example/: pyproject.toml
examples/custom_drag_target_example/src/: main.py
src/custom_drag_target/: __init__.py  custom_drag_target.py
src/custom_drag_target.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/flutter/custom_drag_target/: pubspec.yaml
src/flutter/custom_drag_target/lib/src/: create_control.dart
